[package]
name = "gymnarium_visualisers_base"
version = "0.1.0"

description = "The visualisers base crate for the gymnarium libraries used for creating visualisations for reinforcement environments"
keywords = ["gym", "reinforcement", "learning", "visualisation"]

repository = "https://github.com/tiquthon/gymnarium_visualisers_base"
authors = ["Thimo Neumann <tiquthon@gmail.com>"]

edition = "2018"
license = "MIT"

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_derive = "1.0.117"
gymnarium_base = { path = "../gymnarium_base" }
